--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="index.css">
   
   <title>Balaji Upadhyay | QR code component</title>
@@ -17,7 +17,7 @@
 <body>  
   <div class="content">
     <div class="qr-code">
-      <img class="qrimg" src="/qr-code-component-main/images/image-qr-code.png" alt="QR-code">
+      <img class="qrimg" src="image-qr-code.png" alt="QR-code">
     </div>
     <div class="heading">
       <h1>Improve your front-end skills by building projects</h1>
